<resources>
    <string name="app_name">Saxion Schedules</string>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5255794757983274/6179521318</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-5255794757983274/9132987717</string>
    <string name="iab_id" translatable="false">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAhp4IDP4diqBkJu6XScKB9AEHbdFyc/JI1dBbJSFiFuKgjGBZyJWhUuxQpMkWuMpArg4q3JSSkdnfAd9yd9LhnOGVI8jsMvdhCVyWRwXdf2U8Do2Ml1YlKkaATvwQFTICMCFRe+p/SsJAL9BYZTesPRvCl9mlCZfT1s0/KrKPL/s6uwWwFlZd4IC7TO/8+CTRcQwV+w4CBKtAOmecdJoa9rxFlzk7YMuHXV3pzFFwu0WBV8MEEYDpN0IvBlEqFcko6q0EEKAoRYmHqZjO2Se21fDhK0/tZqe/8QFzPFHo4kI/wIW65kcUJkujpa7u4F4bhE8TVZ/w3vX1KpTAUDtknQIDAQAB</string>


    <string name="loading">Loading</string>
    <string name="free_day">Nothing planned today.</string>
    <string name="vacation">Vacation</string>
    <string name="holiday">Holiday</string>
    <string name="week">Week</string>
    <string name="week_current">This week</string>
    <string name="search_hint">Search</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="getting_started">Getting started</string>
    <string name="email_roosters">saxionroosters.dev@gmail.com</string>
    <string name="facts">Facts</string>
    <string name="contributors">Contributors</string>
    <string name="location">Location</string>
    <string name="teachers">Professor(s)</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="floor">Floor</string>
    <string name="room">Room</string>

    <!-- titles -->
    <string name="title_college_details">College details</string>
    <string name="title_select_color_theme">Select Color Theme</string>
    <string name="title_select_default_schedule">Select Default Schedule</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_header">Personalise</string>w
    <string name="title_setting_schedule_default">Default Schedule</string>
    <string name="title_setting_theme">Color Theme</string>

    <string name="title_options_header">Other</string>
    <string name="title_option_upgrade">Upgrade</string>
    <string name="subtitle_option_upgrade">Removes ads. Supports development.</string>
    <string name="title_option_feedback">Feedback</string>
    <string name="subtitle_option_feedback">Share your thoughts.</string>
    <string name="title_option_github">Source Code</string>
    <string name="subtitle_option_github">Let\'s join forces! Contribute your ideas.</string>
    <string name="title_option_licenses">Licenses</string>
    <string name="subtitle_option_licenses">Open Source Libraries we \u2665.</string>
    <string name="title_option_about">About</string>
    <string name="subtitle_option_about">App Version</string>

    <string name="title_intro_home">Your schedule at hand</string>
    <string name="subtitle_intro_home">Super easy, always your schedule with you. Created with \u2665 by students, for students &amp; teachers of Saxion University of Applied Sciences.</string>
    <string name="title_intro_social_coding">Community</string>
    <string name="subtitle_intro_social_coding">Designers, developers, creative thinkers and do-ers gather yourselves!  Community oriented &amp; opensource code, you decide the next step of this app!</string>
    <string name="title_intro_maps">Locations</string>
    <string name="subtitle_intro_maps">Lost? You can now also check your college location.</string>

    <!-- Errors -->
    <string name="error_no_default_schedule">Please select a default schedule to finish the introduction.</string>
    <string name="error_no_iab_available">Your device currently doesn\'t support In-App Billing. Try to update Google Play Services.</string>
    <string name="error_no_location">Location unknown</string>

    <!-- Messages -->
    <string name="message_theme_visible_after_reset">The theme will be applied after you force reset the Application.</string>
    <string name="message_select_default_schedule">Select the schedule you want to load when the App is launched.</string>
    <string name="message_redirect_github">You will be redirected to our GitHub page.</string>
    <string name="message_feedback">We are looking forward to hear from you!</string>
    <string name="message_purchase_success">You have successfully upgraded to premium! Thank you for your support.</string>
    <string name="message_about">This App is an experimental initiative by Saxion students Jelle ten Brinke &amp; Hugo Olthof.</string>
    <string name="message_goal_1">\u2022 Deliver the best Schedule app to our users.</string>
    <string name="message_goal_2">\u2022 Learn and innovate by sharing knowledge.</string>
    <string name="message_goal_3">\u2022 Encourage Open Source development</string>
    <string name="message_fact_1">\u2022 2500+ downloads in the first week after launch.</string>
    <string name="message_fact_2">\u2022 We serve an average of 1500 unique users per day with several sessions.</string>

    <string-array name="colorThemes">
        <item>Saxion Theme</item>
        <item>Purple</item>
        <item>Deep Purple</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Indigo</item>
        <item>Blue</item>
        <item>LightBlue</item>
        <item>Cyan</item>
        <item>Teal</item>
        <item>Green</item>
        <item>Light Green</item>
        <item>Lime</item>
        <item>Light Yellow</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Deep Orange</item>
        <item>Grey</item>
        <item>Blue Grey</item>
        <item>Brown</item>
    </string-array>
</resources>
