<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/message_about"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    style="@style/TextViewAppearance.Body3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Goals" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/message_goal_1" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/message_goal_2" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/message_goal_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    style="@style/TextViewAppearance.Body3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facts" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/message_fact_1" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/message_fact_2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <TextView
                    style="@style/TextViewAppearance.Body3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contributors" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="\u2022 Wessel Perik(Student)" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="\u2022 Niels G. (Student)" />

                <TextView
                    style="@style/TextViewAppearance.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="\u2022 Arjen ter Horst (Saxion)" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>